# ha-silverline

./: .gitignore  GUIDELINES.md  README.md  pyproject.toml  silverline-fe-specs.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: hacs.yaml  hassfest.yaml  pysilverline-pypi.yaml  release.yaml  tests.yaml
custom_components/poolex_silverline/: __init__.py  _config_validation.py  binary_sensor.py  climate.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  icons.json  manifest.json  number.py  quality_scale.yaml  select.py  sensor.py  sensor_descriptions.py  strings.json  switch.py  util.py
custom_components/poolex_silverline/translations/: de.json  en.json  es.json  fr.json  it.json  nl.json  pl.json
pysilverline/: LICENSE  README.md  pyproject.toml
pysilverline/src/pysilverline/: __init__.py  __main__.py  client.py  const.py  diagnose.py  discovery.py  exceptions.py  layouts.py  models.py  protocol.py  session.py  transport.py
pysilverline/src/pysilverline/devices/: __init__.py
pysilverline/src/pysilverline/protocol/: __init__.py  crypto.py  frame.py  v33.py  v34.py  v35.py
pysilverline/tests/: test_client.py  test_client_35.py  test_client_more.py  test_devices.py  test_diagnose.py  test_discovery.py  test_protocol.py  test_protocol_35.py
scripts/: probe.py
tests/: conftest.py  fake_tuya35.py  test_binary_sensor.py  test_climate.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_init.py  test_number.py  test_repair_issues.py  test_select.py  test_sensor.py  test_switch.py  test_util.py
tests/snapshots/: test_sensor.ambr
